2015-07-07 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonElectronLikelihoodDC14: moved from eta to etaBE(2) cut 
	* ttHMultileptonLooseEventSaver: added etaBE(2), loose isolation from tool and ele match; and d0sig from AODTrackingHelpers
	* README: updated to Top,20.3.18
	
2015-07-03 David Hohn <david.hohn@cern.ch>
	* loosen tau cuts

2015-07-01 David Hohn <david.hohn@cern.ch>
	* adjust to new names of particleType and Origin in Truth containers, works with derivation 20.1.5.4

2015-06-30 David Hohn <david.hohn@cern.ch>
	* Add "Count" histogram for normalisation

2015-06-29 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver and ttHMultileptonLooseObjectSaver: various changes to make pkg compile under 
	Top,20.3.15b
	* ttHMultileptonLooseEventSaver.cxx: add passEventCleaning
	
2015-06-29 Giuseppe Salamanna <salaman AT cern.ch>
	* Tagging the trunk that worked with 20.3.13 as ttHMultiAna-00-00-01 and make a branch of it
	
2015-06-26 David Hohn <david.hohn@cern.ch>
	* Remove TauTruthMatchingTool, matching is now done in derivation
	* Update tau truth variables to read decorations

2015-06-19 Rustem Ospanov <rustem at cern.ch>
	* Add TruthSelector tool
	* Select W, Z, H, tau, top and direct children
	* Select stable leptons with pt>5 GeV and their direct parents
	
2015-06-18 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: some fixes for things that weren't called as in Run 1 ntuple and some duplicate trigger items; 
	jet_truth_label now works: it has been switched on
	
2015-06-17 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: d0 not corrected for PV, as per ID Tracking recommendations; 
	z0 corrected for PV, now accessed by checking xAOD::VxType. Added var for N(PU vertices)
	
	
2015-06-16 Peter Onyisi <ponyisi AT cern.ch>
	* add ScalarWrapper to allow clean adding of non-vector variables
	* reorganize trigger code for easy extensibility
