@@ -1,3 +1,7 @@
+2015-07-08 Giuseppe Salamanna <salaman AT cern.ch>
+	* ttHMultileptonLooseObjectLoader: make things a bit more configurable
+	* generic-..txt: clean up mc15 one and add lepton and jet cuts; create data15 one 
+	
 2015-07-07 Giuseppe Salamanna <salaman AT cern.ch>
 	* ttHMultileptonElectronLikelihoodDC14: moved from eta to etaBE(2) cut 
 	* ttHMultileptonLooseEventSaver: added etaBE(2), loose isolation from tool and ele match; and d0sig from AODTrackingHelpers
